controller: admin logout
