# controller/admin_login.go
@@ -18,6 +18,7 @@ type AdminLoginController struct{}
 func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLoginOut)
 }
 
 // AdminLogin godoc
@@ -69,4 +70,20 @@ func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 
 	out := &dto.AdminLoginOutput{Token: params.Username}
 	middleware.ResponseSuccess(c, out)
+}
+
+// AdminLogin godoc
+// @Summary 管理员退出
+// @Description 管理员退出
+// @Tags 管理员接口
+// @ID /admin_login/logout
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLoginOut(c *gin.Context) {
+	sess := sessions.Default(c)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(c, "")
 }
